[OBSDATA-13995] Backport /status/ready endpoint (apache #19148)
Backport of upstream commit ee614dc3439835e05cd1670bd5f145e675b98f8a
(apache/druid#19148), which predates and is required by the
service-discovery isPodReady() filter backported to druid-30 in
455f3e5715 (OBSDATA-13995 Backport connect timeout (#450) and service
discovery fix (apache #19139) to druid 30 (#469)).

Without this endpoint, a pod's readiness/startup probe pointed at
/status/selfDiscovered deadlocks: k8s only marks a container ready
after its probe passes, but the k8s-discovery isPodReady() filter
requires k8s to already report the container ready before
self-discovery (and therefore /status/selfDiscovered) can succeed.
This surfaced as a crash-restart loop on druid-devel-44409 overlord
pods (running druid-34) immediately after rolling to an image
containing the isPodReady() filter; druid-30 carries the same filter
and is exposed to the identical risk on its next fresh pod rollout.

This commit adds ServiceAnnouncementState, a purely local flag flipped
by the node's own announce()/unannounce() lifecycle handlers, and
exposes it via a new /status/ready endpoint that upstream now
recommends as the probe target instead of /status/selfDiscovered
(see the docs update in apache#19139). Wiring probes to /status/ready
is a separate, follow-up change to the helm chart / operator defaults.

druid-30's StatusResource constructor does not carry the RuntimeInfo
parameter present upstream/on druid-34, so serviceAnnouncementState
is threaded through as the 4th constructor argument instead of the
5th; all other files apply verbatim from the upstream commit.

(cherry picked from commit ee614dc3439835e05cd1670bd5f145e675b98f8a)